wordpress-mysql-learn/mysql_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: service-mysql
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: service-mysql
        spec:
            containers:
            - name: mysql
              image: mysql:5.7
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
    name: mysql-service
spec:
        ports:
        - port: 3306
        selector:
                app: service-mysql
