wordpress-mysql-learn/wordpres_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: service-wordpress
    template:
        metadata:
            labels:
                app: service-wordpress
        spec:
            containers:
            - name: wordpress
              image: wordpress
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: wordpress-service
spec:
        ports:
        - port: 80 
        selector:
                app: service-wordpress
