wordpress-mysql-learn/wordpres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:
  name: test-wordpress
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.linux.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
